create github pages

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/k">how to develop own website</a></section><section class="cid-qP2p5FA0Eb mbr-fullscreen" id="header2-f">
+<section class="engine"><a href="https://mobirise.ws/m">drag and drop website creator</a></section><section class="cid-qP2p5FA0Eb mbr-fullscreen" id="header2-f">
 
     
 
@@ -93,7 +93,7 @@
                 <ol>
                     <li><strong>Fast and Easy</strong>-with a simple interface and clear design, SafeU has the capability to be the "go-to" safety application for our college campus. Within seconds, your network knows your location. For emergencies, you can reach campus police with a click of a button.</li>
                     <li><strong>Informative</strong> - know your location and how to get to campus police with the click of a button. Find out everything you need to know about campus police from the application itself.</li>
-                    <li><strong>Customizable</strong><span style="font-size: 1rem;">&nbsp;- At any point, you can adjust who to call in the event of an emergency. &nbsp;(Also if we ever wanted to export this design to a different college, it is easy to edit the locations/numbers accordingly).</span><br></li>
+                    <li><strong>Customizable</strong><span style="font-size: 1rem;">&nbsp;- At any point, you can adjust who can text in the event of an emergency. &nbsp;(Also if we ever wanted to export this design to a different college, it is easy to edit the locations/numbers accordingly).</span><br></li>
                 </ol>
             </div>
         </div>
